; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_socket_info.c_fill_sockbuf_info.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_socket_info.c_fill_sockbuf_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockbuf = type { %struct.TYPE_2__, i32, i32, i32, i32, i32, i32 }
%struct.TYPE_2__ = type { i32, i32 }
%struct.sockbuf_info = type { i32, i32, i32, i32, i32, i32, i32 }

@hz = common dso_local global i32 0, align 4
@tick = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sockbuf*, %struct.sockbuf_info*)* @fill_sockbuf_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fill_sockbuf_info(%struct.sockbuf* %0, %struct.sockbuf_info* %1) #0 {
  %3 = alloca %struct.sockbuf*, align 8
  %4 = alloca %struct.sockbuf_info*, align 8
  store %struct.sockbuf* %0, %struct.sockbuf** %3, align 8
  store %struct.sockbuf_info* %1, %struct.sockbuf_info** %4, align 8
  %5 = load %struct.sockbuf*, %struct.sockbuf** %3, align 8
  %6 = getelementptr inbounds %struct.sockbuf, %struct.sockbuf* %5, i32 0, i32 6
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.sockbuf_info*, %struct.sockbuf_info** %4, align 8
  %9 = getelementptr inbounds %struct.sockbuf_info, %struct.sockbuf_info* %8, i32 0, i32 6
  store i32 %7, i32* %9, align 4
  %10 = load %struct.sockbuf*, %struct.sockbuf** %3, align 8
  %11 = getelementptr inbounds %struct.sockbuf, %struct.sockbuf* %10, i32 0, i32 5
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.sockbuf_info*, %struct.sockbuf_info** %4, align 8
  %14 = getelementptr inbounds %struct.sockbuf_info, %struct.sockbuf_info* %13, i32 0, i32 5
  store i32 %12, i32* %14, align 4
  %15 = load %struct.sockbuf*, %struct.sockbuf** %3, align 8
  %16 = getelementptr inbounds %struct.sockbuf, %struct.sockbuf* %15, i32 0, i32 4
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.sockbuf_info*, %struct.sockbuf_info** %4, align 8
  %19 = getelementptr inbounds %struct.sockbuf_info, %struct.sockbuf_info* %18, i32 0, i32 4
  store i32 %17, i32* %19, align 4
  %20 = load %struct.sockbuf*, %struct.sockbuf** %3, align 8
  %21 = getelementptr inbounds %struct.sockbuf, %struct.sockbuf* %20, i32 0, i32 3
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.sockbuf_info*, %struct.sockbuf_info** %4, align 8
  %24 = getelementptr inbounds %struct.sockbuf_info, %struct.sockbuf_info* %23, i32 0, i32 3
  store i32 %22, i32* %24, align 4
  %25 = load %struct.sockbuf*, %struct.sockbuf** %3, align 8
  %26 = getelementptr inbounds %struct.sockbuf, %struct.sockbuf* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.sockbuf_info*, %struct.sockbuf_info** %4, align 8
  %29 = getelementptr inbounds %struct.sockbuf_info, %struct.sockbuf_info* %28, i32 0, i32 2
  store i32 %27, i32* %29, align 4
  %30 = load %struct.sockbuf*, %struct.sockbuf** %3, align 8
  %31 = getelementptr inbounds %struct.sockbuf, %struct.sockbuf* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.sockbuf_info*, %struct.sockbuf_info** %4, align 8
  %34 = getelementptr inbounds %struct.sockbuf_info, %struct.sockbuf_info* %33, i32 0, i32 1
  store i32 %32, i32* %34, align 4
  %35 = load %struct.sockbuf*, %struct.sockbuf** %3, align 8
  %36 = getelementptr inbounds %struct.sockbuf, %struct.sockbuf* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load i32, i32* @hz, align 4
  %40 = mul nsw i32 %38, %39
  %41 = load %struct.sockbuf*, %struct.sockbuf** %3, align 8
  %42 = getelementptr inbounds %struct.sockbuf, %struct.sockbuf* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 4
  %45 = load i32, i32* @tick, align 4
  %46 = sdiv i32 %44, %45
  %47 = add nsw i32 %40, %46
  %48 = load %struct.sockbuf_info*, %struct.sockbuf_info** %4, align 8
  %49 = getelementptr inbounds %struct.sockbuf_info, %struct.sockbuf_info* %48, i32 0, i32 0
  store i32 %47, i32* %49, align 4
  %50 = load %struct.sockbuf_info*, %struct.sockbuf_info** %4, align 8
  %51 = getelementptr inbounds %struct.sockbuf_info, %struct.sockbuf_info* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 4
  %53 = icmp eq i32 %52, 0
  br i1 %53, label %54, label %63

54:                                               ; preds = %2
  %55 = load %struct.sockbuf*, %struct.sockbuf** %3, align 8
  %56 = getelementptr inbounds %struct.sockbuf, %struct.sockbuf* %55, i32 0, i32 0
  %57 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %56, i32 0, i32 1
  %58 = load i32, i32* %57, align 4
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %60, label %63

60:                                               ; preds = %54
  %61 = load %struct.sockbuf_info*, %struct.sockbuf_info** %4, align 8
  %62 = getelementptr inbounds %struct.sockbuf_info, %struct.sockbuf_info* %61, i32 0, i32 0
  store i32 1, i32* %62, align 4
  br label %63

63:                                               ; preds = %60, %54, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
